--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,8 +22,11 @@
     "build:umd:dev": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i src/index.js -o dist/redux-saga.js",
     "build:umd:prod": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -i src/index.js -o dist/redux-saga.min.js",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir lib",
+    "watch:cjs": "cross-env BABEL_ENV=cjs babel src --watch --out-dir lib",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "watch:es": "cross-env BABEL_ENV=es babel src --watch --out-dir es",
     "build": "npm run clean && run-p build:**",
+    "watch": "run-p watch:**",
     "prepare": "npm run build",
     "prepush": "npm run test",
     "prerelease": "npm run test && npm run prepare",
